@@ -16,3 +16,22 @@
  10
  1 2 3
  2 4 6
+ 0 5
+ 1 6
+ 2 7
+ 3 8
+ 4 9
+ 0 1 2 3 4
+ 5 6 7 8 9
+ 0
+ 1
+ 2
+ 3
+ 4
+ 0 1 2 3 4
+ 0 1 2 3 4
+ 0
+ 1
+ 2
+ 3
+ 4
