@@ -1,3 +1,7 @@
+2007-09-12  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* src/matrix.pmt (igraph_matrix_transpose) : added
+
 2007-09-11  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* src/igraph_strvector.c (igraph_strvector_append) :
